work on gap issue on all listings page

--- a/src/components/ListingCard/ListingCard.module.css
+++ b/src/components/ListingCard/ListingCard.module.css
@@ -1,3 +1,9 @@
-span{
-  text-decoration: none;
+.container{
+  display: flex;
+  flex-direction: column;
+  margin-right: 5px;
+}
+ article{
+  width: 400px;
+  padding-right: 5px;
 }
